--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <link rel="stylesheet" href="style.css">
-        <title>Calculator for Front End Masters exercise</title>
+        <title>Calculator Assignment</title>
                 
     </head>
     <body>
